--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "nvim"]
 	path = nvim
 	url = https://github.com/SoxPopuli/neovim_settings
+	branch = main
 [submodule "tmux"]
 	path = tmux
 	url = https://github.com/SoxPopuli/tmux
+	branch = main
 [submodule "kitty"]
 	path = kitty
 	url = https://github.com/SoxPopuli/kitty
+	branch = main
