--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,11 +7,12 @@ set -s escape-time 0
 set-option -g focus-events on
 
 # Edit colors
-set -g pane-active-border-style fg='DarkOrchid'
-set -g pane-border-style fg='RebeccaPurple'
+set -g pane-border-lines heavy
+set -g pane-active-border-style fg='#000000'
+set -g pane-border-style fg='#000000'
 
 set -g status-fg 'White'
-set -g status-bg 'Indigo'
+set -g status-bg '#000000'
 
 # remap prefix to C-A
 unbind C-b
