Improve font readability

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,7 @@ set -g pane-border-lines heavy
 set -g pane-active-border-style fg='#000000'
 set -g pane-border-style fg='#000000'
 
-set -g status-fg 'White'
+set -g status-fg '#ffffff'
 set -g status-bg '#000000'
 
 # remap prefix to C-A
