feat(tmux): add keybind to go to home

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,6 +49,8 @@ set-option -g allow-rename off
 # use vi keys in copy mode
 setw -g mode-keys vi
 
+bind-key '~' 'new-session -A -s home -c ~'
+
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h' { select-pane -L }
