feat(tmux): add url capture

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -100,12 +100,17 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @tmux-nvim-resize-keybinding-up 'C-k' 
 # set -g @tmux-nvim-resize-keybinding-right 'C-l' 
 
+bind 'u' run-shell -b \
+    "tmux capture-pane -J -p \
+    | grep -oE 'https?://[^/\"]+(/[^\" ]*)?' \
+    | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all \
+    | xargs open"
 
-run '~/.tmux/plugins/tpm/tpm'
 
 # Required for tmux-yank
 # set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 set-option -g set-clipboard on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
+# run '~/.config/tmux/plugins/tpm/tpm'
