fix(tmux): fix vim detection for busybox `ps`

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,7 +51,8 @@ setw -g mode-keys vi
 
 bind-key '~' 'new-session -A -s home -c ~'
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_vim="ps -o comm,tty | grep -w '#{b:pane_tty}' | grep -iq nvim"
 
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h' { select-pane -L }
 bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j' { select-pane -D }
@@ -106,6 +107,8 @@ bind 'u' run-shell -b \
     | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all \
     | xargs open"
 
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'mkdir -p ~/.tmux/plugins && git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # Required for tmux-yank
 # set-option -g default-command "reattach-to-user-namespace -l $SHELL"
