--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,8 +51,9 @@ setw -g mode-keys vi
 
 bind-key '~' 'new-session -A -s home -c ~'
 
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-is_vim="ps -o comm,tty | grep -w '#{b:pane_tty}' | grep -iq nvim"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# is_vim="ps -o comm,tty | grep -w '#{b:pane_tty}' | grep -iq nvim"
+
 
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h' { select-pane -L }
 bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j' { select-pane -D }
@@ -101,11 +102,22 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @tmux-nvim-resize-keybinding-up 'C-k' 
 # set -g @tmux-nvim-resize-keybinding-right 'C-l' 
 
-bind 'u' run-shell -b \
-    "tmux capture-pane -J -p \
-    | grep -oE 'https?://[^/\"]+(/[^\" ]*)?' \
-    | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all \
-    | xargs open"
+is_macos="uname | grep -q Darwin"
+
+bind 'u' if-shell "$is_macos" {
+    run-shell -b \
+        "tmux capture-pane -J -p \
+        | grep -oE 'https?://[^/\"\(\)]+(/[^\" \(\)]*)?' \
+        | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all \
+        | xargs open"
+} {
+    run-shell -b \
+        "tmux capture-pane -J -p \
+        | grep -oE 'https?://[^/\"\(\)]+(/[^\" \(\)]*)?' \
+        | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all \
+        | xargs -r xdg-open"
+}
+
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'mkdir -p ~/.tmux/plugins && git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
