feat(git): use work git config if in work folder

--- a/git/config
+++ b/git/config
@@ -1,6 +1,8 @@
 [user]
 	email = charlottesmith5019@gmail.com
 	name = Charlotte Smith
+[includeIf "gitdir:~/Documents/Work/"]
+    path = ~/.config/git/work.gitconfig
 [diff]
     tool = nvimdiff
     guitool = nvimdiff
