config(nvim): bunch o changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -102,6 +102,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @tmux-nvim-resize-keybinding-up 'C-k' 
 # set -g @tmux-nvim-resize-keybinding-right 'C-l' 
 
+bind 'o' kill-pane -a
+
 is_macos="uname | grep -q Darwin"
 
 bind 'u' if-shell "$is_macos" {
