feat(nvim): add neotest, colorschemes

--- a/git/config
+++ b/git/config
@@ -24,7 +24,7 @@
 	defaultBranch = main
 [push]
     autoSetupRemote = true
-[blame]
-	ignoreRevsFile = .git-blame-ignore-revs
+; [blame]
+;     ignoreRevsFile = .git-blame-ignore-revs
 [rerere]
 	enabled = true
