feat(nvim): add triple arrow binds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,9 @@
 # True color support
-set-option -sa terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "screen-256color"
+set -as terminal-features ",xterm-256color:RGB"
+set -as terminal-overrides ",xterm-256color:RGB"
+set -s extended-keys on
+set -as terminal-features 'xterm*:extkeys'
 
 # Removes escape delay
 set -s escape-time 0
