--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,7 +31,11 @@ set-option -g renumber-windows on
 
 # split panes using | and -
 bind \\ split-window -h -c '#{pane_current_path}'
+bind h split-window -h -c '#{pane_current_path}'
+
 bind - split-window -v -c '#{pane_current_path}'
+bind v split-window -v -c '#{pane_current_path}'
+
 unbind '"'
 unbind %
 
