--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,10 +31,10 @@ set-option -g renumber-windows on
 
 # split panes using | and -
 bind \\ split-window -h -c '#{pane_current_path}'
-bind h split-window -h -c '#{pane_current_path}'
+bind v split-window -h -c '#{pane_current_path}'
 
 bind - split-window -v -c '#{pane_current_path}'
-bind v split-window -v -c '#{pane_current_path}'
+bind h split-window -v -c '#{pane_current_path}'
 
 unbind '"'
 unbind %
